# cubecl-recipes

./: .gitignore  Cargo.toml  README.md  cubecl.toml
src/: main.rs
